--- a/package.json
+++ b/package.json
@@ -20,14 +20,23 @@
     "@angular/platform-browser": "^7.2.2",
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
+    "@ionic-native/app-center-analytics": "^5.5.0",
+    "@ionic-native/app-center-crashes": "^5.5.0",
     "@ionic-native/code-push": "^5.3.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/device": "^5.5.0",
+    "@ionic-native/qr-scanner": "^5.5.0",
+    "@ionic-native/sim": "^5.4.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
     "code-push": "^2.0.6",
     "cordova-android": "7.1.4",
     "cordova-ios": "4.5.5",
+    "cordova-plugin-add-swift-support": "2.0.2",
+    "cordova-plugin-appcenter-analytics": "0.3.3",
+    "cordova-plugin-appcenter-crashes": "0.3.3",
+    "cordova-plugin-appcenter-shared": "0.3.3",
     "cordova-plugin-code-push": "1.11.17",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "2.0.2",
@@ -36,6 +45,8 @@
     "cordova-plugin-file-transfer": "^1.6.3",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^3.1.2",
+    "cordova-plugin-qrscanner": "3.0.1",
+    "cordova-plugin-sim": "1.3.3",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -82,7 +93,11 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-sim": {},
+      "cordova-plugin-qrscanner": {},
+      "cordova-plugin-appcenter-analytics": {},
+      "cordova-plugin-appcenter-crashes": {}
     },
     "platforms": [
       "ios",
